# temp

./: CMakeLists.txt  information.txt  init.c  platform.h  start.S
linker/: qemu_kernel.ld  qemu_kernel.ldddd
